interface-segregation-principle/good/src/main/java/example/Workable.java
package example;

public interface Workable {
    void work();
}
