interface-segregation-principle/bad/src/main/java/example/HumanWorker.java
package example;

public class HumanWorker implements Worker {

    @Override
    public void work() {
        System.out.println("Human working");
    }

    @Override
    public void eat() {
        System.out.println("Human eating");
    }

    @Override
    public void sleep() {
        System.out.println("Human sleeping");
    }
}
